--- a/watertransport/src/main/res/layout/item_msg.xml
+++ b/watertransport/src/main/res/layout/item_msg.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_msg_tip" />
 
         <TextView
             android:id="@+id/tv_date"
